--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Web Himsi 2019",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "Dadi Ilham",
   "license": "ISC"
