--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Web Himsi 2019",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Dadi Ilham",
   "license": "ISC"
